result/subtask06-if/testcase01.out
/home/share/hw2/input/subtask06-if/testcase01.cpp:1:21: error:  syntax error
     1 |int main(string argv[ ) {
       |                    ^
Total lines: 1
